--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.0.2",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "gh-pages": "^4.0.0",
-    "npm-check-updates": "^16.1.2",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "gh-pages": "^5.0.0",
+    "npm-check-updates": "^16.7.4",
     "react": "^18.2.0",
     "react-build-info": "^0.0.3",
     "react-dom": "^18.2.0",
-    "react-obfuscate-email": "^1.0.16",
+    "react-obfuscate-email": "^1.1.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.8.3",
-    "web-vitals": "^3.0.1"
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "npm version patch && react-build-info && react-scripts start",
